--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ July 7-23 2025. Nahous, Federal Palace Hotel, Victoria Island, Lagos. The No.1 E
         <meta property="og:type" content="website">
         <meta property="og:title" content="VVS Lagos 2025">
         <meta property="og:description" content="Welcome to VVSLagos 2025, ESTE FUEGO: JOURNEY OF THE DESCENDANTS.
-July 7-23 2025. Alliance Française de Lagos, 9 Osborne Rd, Ikoyi. The No.1 Event of Summer 2025.">
+July 7-23 2025. Nahous, Federal Palace Hotel, Victoria Island, Lagos. The No.1 Event of Summer 2025.">
         <meta property="og:image" content="https://framerusercontent.com/assets/xWneTbTcIqTDtk5IYXVSkCBuNA8.png">
         <!-- Twitter -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="VVS Lagos 2025">
         <meta name="twitter:description" content="Welcome to VVSLagos 2025, ESTE FUEGO: JOURNEY OF THE DESCENDANTS
-July 7-23 2025. Alliance Française de Lagos, 9 Osborne Rd, Ikoyi. The No.1 Event of Summer 2025.">
+July 7-23 2025. Nahous, Federal Palace Hotel, Victoria Island, Lagos The No.1 Event of Summer 2025.">
         <meta name="twitter:image" content="https://framerusercontent.com/assets/xWneTbTcIqTDtk5IYXVSkCBuNA8.png">
         <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
         <meta name="robots" content="max-image-preview:large">
