--- a/index.html
+++ b/index.html
@@ -5441,12 +5441,12 @@ July 7-23 2025. Nahous, Federal Palace Hotel, Victoria Island, Lagos The No.1 Ev
                     </div>
                     <div class="ssr-variant hidden-11tv71h">
                         <div class="framer-19k2f6c" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none" data-framer-component-type="RichTextContainer">
-                            <h3 style="--font-selector:R0Y7TWFucm9wZS02MDA=;--framer-font-family:&quot;Manrope&quot;, &quot;Manrope Placeholder&quot;, sans-serif;--framer-font-size:24px;--framer-font-weight:600;--framer-line-height:1.5em;--framer-text-alignment:left" class="framer-text">📅 July 9. -11</h3>
+                            <h3 style="--font-selector:R0Y7TWFucm9wZS02MDA=;--framer-font-family:&quot;Manrope&quot;, &quot;Manrope Placeholder&quot;, sans-serif;--framer-font-size:24px;--framer-font-weight:600;--framer-line-height:1.5em;--framer-text-alignment:left" class="framer-text">📅 July 9-11</h3>
                         </div>
                     </div>
                     <div class="ssr-variant hidden-z06mw7 hidden-72rtr7">
                         <div class="framer-19k2f6c" style="outline:none;display:flex;flex-direction:column;justify-content:flex-start;flex-shrink:0;transform:none" data-framer-component-type="RichTextContainer">
-                            <h3 style="--font-selector:R0Y7TWFucm9wZS02MDA=;--framer-font-family:&quot;Manrope&quot;, &quot;Manrope Placeholder&quot;, sans-serif;--framer-font-size:24px;--framer-font-weight:600;--framer-line-height:1.5em;--framer-text-alignment:center" class="framer-text">📅 July 9. -11</h3>
+                            <h3 style="--font-selector:R0Y7TWFucm9wZS02MDA=;--framer-font-family:&quot;Manrope&quot;, &quot;Manrope Placeholder&quot;, sans-serif;--framer-font-size:24px;--framer-font-weight:600;--framer-line-height:1.5em;--framer-text-alignment:center" class="framer-text">📅 July 9-11</h3>
                         </div>
                     </div>
                 </div>
